# MedicalImageProcessing_demo

./: .gitignore  .gitmodules  1. medical_image_registration.py  10.find_t2_dwi_adc.py  11.segmentation_result_assessment.py  2. volume_image_to_png.py  3. volume_image_format_convert.py  4. SAM.ipynb  4. sam_segment_mri_prostate.py  5. ConstructOwnDataset.ipynb  6. 4d_dicom_reader.py  7. prostate_cancer_segmentation.py  8. systematic_biopsy_plan.py  8.systematic_biopsy_plan.py  9. mri_slice_spacing.py  9.mri_slice_spacing.py  ConstructOwnDataset.ipynb  MedSAM.ipynb  README.md  SAM.ipynb  different_info.json  environment.yml  f_convert_to_nifti.py  f_findAllT2.py  f_find_all_T2.py  f_sort_data_for_erinn.py  f_test_segmentation_model.py  medical_image_registration.py  sam_segment_mri_prostate.py  temp_dicom_img.dcm  test_nifti_world_coordinate.py  volume_image_format_convert.py  volume_image_to_png.py
8. systematic_biopsy_plan/: CMakeLists.txt  SystematicPointPlanner.cpp  SystematicPointPlanner.h  SystematicPointPlanner2.cpp  SystematicPointPlanner2.h  SystematicPointPlanner3.cpp  SystematicPointPlanner3.h  main.cpp
data/4d-dicom/DWI-sTRA/: DJ01.dcm  DJ02.dcm  DJ03.dcm  DJ04.dcm  DJ05.dcm  DJ06.dcm  DJ07.dcm  DJ08.dcm  DJ09.dcm  DJ10.dcm  DJ11.dcm  DJ13.dcm  DJ14.dcm  DJ15.dcm  DJ16.dcm  DJ17.dcm  DJ18.dcm  DJ19.dcm  DJ21.dcm  DJ22.dcm  DJ23.dcm  DJ24.dcm  DJ25.dcm  DJ26.dcm  DJ28.dcm  DJ29.dcm  DJ30.dcm  DJ31.dcm  DJ32.dcm  DJ33.dcm  DJ34.dcm  DJ35.dcm  (+32 more)
data/biopsy-plan/: MRI_7_seg.stl  MR_t2_tse_fs_tra_320_p2_seg.stl  MR_t2_tse_fs_tra_seg.stl  MR_t2_tse_tra_p2-4mm-wwp_FIL_seg.stl  MainMR_AxT2_seg.stl  Patient20201029MR_T2W_SPAIR_ax_seg.stl  WZJ-T2_seg.stl  specimen_16g.STL  李尚军20210310MR_t2_tse_fs_tra_seg.stl  陈炳粦20210107MR_t2_tse_tra_seg.stl
lib/: folder.py  medical_folder.py  sam_base.py
result/4d-dicom/: basic_info.json
test/: test_nifti_world_coordinate.py
(+1478 files in other folders)
